Added icon in index.js

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <button type="button" class="btn btn-dark submitBtn" id="subBtn">Show Temperature</button>
   </div>
 
-  <div class="results">
+  <div class="results" id="output">
 
     <h3 id="loc">Your location is ______.</h3>
     <h3 id="pos">Your location is at longitude ______  and latitude _______.</h3>
